# fredis

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SecondBrainArchitecture.excalidraw  TODO.md  build_v2.py  docker-compose.yml  fredis-pitch.html  generate_diagram.py  master.env.example  setup_workspace.py
.claude/scripts/: .env.example  CLAUDE.md  _lv_voice_seed.py  auth_watchdog.py  bootstrap_hubspot.py  bootstrap_hubspot_tickets.py  bootstrap_monday_enrich.py  bootstrap_monday_finances.py  bootstrap_monday_repurpose.py  check.sh  ci-local-fallback.sh  com.linards.fredis-daily-brief.plist  config.py  daily_brief.py  db.py  deploy.sh  deps_audit.py  embeddings.py  fredis_mcp_auth.py  fredis_mcp_server.py  fredis_mcp_tools.py  gate_loader.py  gate_schema.py  git-merge-concat  git-sync  heartbeat.py  interview_parser.py  interview_writer.py  meeting_prep.py  memory_flush.py  memory_index.py  memory_reflect.py  memory_search.py  memory_synthesis.py  notifications.py  onboard.py  pyproject.toml  query.py  run_auth_watchdog.sh  run_brief.sh  (+27 more)
.claude/scripts/integrations/: __init__.py  archon_api.py  archon_gate.py  asana_api.py  auth.py  calendar_api.py  circle_api.py  docs_api.py  drive_api.py  github_api.py  github_projects.py  gmail.py  habit_signals.py  hubspot_api.py  hubspot_scans.py  integration_template.py  monday_api.py  monday_scans.py  registry.py  sheets_api.py  slack_api.py
.claude/scripts/schedule/: README.md  com.linards.fredis-chat.plist  com.linards.fredis-deps-audit.plist  com.linards.fredis-heartbeat.plist  com.linards.fredis-reflect.plist  com.linards.fredis-synthesis.plist  com.linards.fredis-vault-sync.plist  com.linards.ssh-tunnel.plist  deps-audit.service  deps-audit.timer  fredis-auth-watchdog.service  fredis-auth-watchdog.timer  fredis-brief.service  fredis-brief.timer  fredis-heartbeat.service  fredis-heartbeat.timer  fredis-meeting-prep.service  fredis-meeting-prep.timer  fredis-reflect.service  fredis-reflect.timer  fredis-summary.service  fredis-summary.timer  fredis-synthesis.service  fredis-synthesis.timer  rotation-runbooks.md  secondbrain-chat.service  secondbrain-mcp-server.service  vault-sync.service  vault-sync.timer  vps-bootstrap.md
.claude/scripts/templates/: gate_breach.md.tmpl
.claude/scripts/tests/: conftest.py  test_archon_api.py  test_auth_watchdog.py  test_block_dangerous_commands.py  test_block_secrets.py  test_block_soul_edit.py  test_block_template_residue.py  test_bootstrap_hubspot_tickets.py  test_channel_router.py  test_chat_channel_routing.py  test_chat_engine.py  test_chat_hook_propagation.py  test_chat_session.py  test_chat_thread_nudge.py  test_client_log_skill.py  test_db.py  test_draft_reply_skill.py  test_embeddings.py  test_fredis_mcp_auth.py  test_fredis_mcp_server.py  test_fredis_mcp_tools.py  test_gate_loader.py  test_github_api.py  test_github_projects.py  test_gmail_unread_count.py  test_gmail_urgent_filter.py  test_guardrail.py  test_habit_signals.py  test_heartbeat_brief.py  test_heartbeat_reconcile.py  (+37 more)
(+485 files in other folders)
