[project]
name = "second-brain-heartbeat"
version = "0.1.0"
description = "Proactive heartbeat system for Second Brain"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "python-dotenv>=1.0.0",
    "win10toast-click>=0.1.2; sys_platform == 'win32'",
    "tzdata>=2024.1",
    # Phase 3: Memory Search
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26.0",
    # Postgres + pgvector (optional — SQLite used as fallback)
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",
    # Phase 5: Direct Platform Integrations
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "asana>=5.0.0",
    "slack-sdk>=3.27.0",
    # Phase 6: Chat Interface
    "slack-bolt>=1.20.0",
    "aiohttp>=3.9.0",
    # Onboarding TUI
    "textual>=0.85.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# heartbeat.py contains a 200-line Claude prompt template inside a triple-quoted
# string; wrapping its sentences would change the rendered prompt. E501 is
# disabled here so the prompt stays human-readable while every other rule applies.
"heartbeat.py" = ["E501"]
# query.py is an argparse-heavy CLI wrapper; long add_argument help strings
# stay readable on one line.
"query.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.uv]
  required-environments = [
      "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
